refactor(pricing): introduce parameter value converter